--- a/.emacs.d/init.org
+++ b/.emacs.d/init.org
@@ -1,8 +1,10 @@
 #+TITLE: Emacs Config
+#+PROPERTY: header-args :tangle init.el
 #+AUTHOR: Jay Goyal
 
 * Basic Config
 If I don't set it up, Emacs Complains
+
 #+BEGIN_SRC emacs-lisp
 ;;; init.el --- Initialization file for Emacs
 ;;; Commentary:
@@ -18,9 +20,6 @@ If I don't set it up, Emacs Complains
 (tooltip-mode -1)           ; Disable tooltips
 (set-fringe-mode 10)        ; Give some breathing room
 (menu-bar-mode -1)          ; Disable the menu bar
-;; Deal with custom block at end
-(setq custom-file "~/.emacs.d/custom.el")
-(load custom-file)
 
 ;; Backup Files setting
 (setq backup-directory-alist '(("." . "~/.emacs.d/backup"))
@@ -66,3 +65,251 @@ If I don't set it up, Emacs Complains
 #+END_SRC
 
 * Theming
+** Line Numbers
+I use relative line numbers
+
+#+BEGIN_SRC emacs-lisp
+(column-number-mode)
+(global-display-line-numbers-mode 1)
+(setq display-line-numbers-type 'relative)
+;; Disable line numbers for some modes
+(dolist (mode '(shell-mode-hook
+                eshell-mode-hook))
+  (add-hook mode (lambda () (display-line-numbers-mode 0))))
+#+END_SRC
+
+** Doom Modeline
+Run all-the-icons-install-fonts first time
+
+#+BEGIN_SRC emacs-lisp
+(use-package all-the-icons)
+
+(use-package doom-modeline
+  :init
+  (doom-modeline-mode 1)
+  :custom
+  ((doom-modeline-height 42)
+   (doom-modeline-icon t)
+   (doom-modeline-major-mode-icon nil)))
+#+END_SRC
+
+** Doom Themes
+
+#+BEGIN_SRC emacs-lisp
+(use-package doom-themes
+  :config
+  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+	doom-themes-enable-italic t) ; if nil, italics is universally disabled
+  (load-theme 'doom-palenight t)
+  (doom-themes-neotree-config)
+  (doom-themes-org-config))
+#+END_SRC
+
+** Dashboard
+#+BEGIN_SRC emacs-lisp
+(use-package dashboard
+  :init
+  (setq dashboard-set-heading-icons t)
+  (setq dashboard-set-file-icons t)
+  (setq dashboard-banner-logo-title "Emacs is Awesome")
+  (setq dashboard-startup-banner "~/.emacs.d/emacs.png")
+  (setq dashboard-center-content nil)
+  (setq dashboard-items '((projects . 3)
+			  (recents . 3)
+			  (agenda . 5 )))
+  :config
+  (dashboard-setup-startup-hook)
+  (dashboard-modify-heading-icons '((recents . "file-text")
+				    (bookmarks . "book"))))
+
+(setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
+#+END_SRC
+
+* Ivy
+I use Ivy as my completion engine.
+
+#+BEGIN_SRC emacs-lisp
+(use-package swiper)
+
+(use-package counsel
+  :bind
+  (("M-x" . counsel-M-x)
+   ("C-x b" . counsel-ibuffer)
+   ("C-x C-f" . counsel-find-file)
+   :map minibuffer-local-map
+   ("C-r" . 'counsel-minibuffer-history)))
+(use-package ivy
+  :diminish
+  :bind
+  (("C-s" . swiper)
+   :map ivy-minibuffer-map
+   ("TAB" . ivy-alt-done)
+   ("C-l" . ivy-alt-done)
+   ("C-j" . ivy-next-line)
+   ("C-k" . ivy-previous-line)
+   :map ivy-switch-buffer-map
+   ("C-k" . ivy-previous-line)
+   ("C-l" . ivy-done)
+   ("C-d" . ivy-switch-buffer-kill)
+   :map ivy-reverse-i-search-map
+   ("C-k" . ivy-previous-line)
+   ("C-d" . ivy-reverse-i-search-kill))
+  :config
+  (ivy-mode 1))
+
+(use-package ivy-rich
+  :init
+  (ivy-rich-mode 1))
+#+END_SRC
+
+* Evil Mode
+I love the dark side
+
+#+BEGIN_SRC emacs-lisp
+(use-package evil
+  :init
+  (setq evil-want-integration t)
+  (setq evil-want-keybinding nil)
+  (setq evil-vsplit-window-right t)
+  (setq evil-want-C-i-jump nil)
+  (setq evil-split-window-below t)
+  (evil-mode)
+  :config
+  (evil-mode 1)
+  (define-key evil-insert-state-map (kbd "C-h") 'evil-delete-backward-char-and-join)
+
+  ;; Use visual line motions even outside of visual-line-mode buffers
+  (evil-global-set-key 'motion "j" 'evil-next-visual-line)
+  (evil-global-set-key 'motion "k" 'evil-previous-visual-line))
+
+
+(use-package evil-collection
+  :after evil
+  :config
+  (setq evil-collection-mode-list '(dashboard dired ibuffer magit))
+  (evil-collection-init))
+#+END_SRC
+
+* Setup Keyboard Shortcuts
+I use general for my keybindings
+
+#+BEGIN_SRC emacs-lisp
+(use-package general
+  :config (general-create-definer semacs/leader-keys
+	    :keymaps '(normal insert visual emacs)
+	    :prefix "SPC"
+	    :global-prefix "C-SPC")
+
+  (semacs/leader-keys
+    "tt" '(counsel-load-theme :which-key "Choose theme")
+    "x" '(counsel-M-x :which-key "Execute a command")))
+
+(use-package hydra)
+
+(defhydra hydra-text-scale (:timeout 4)
+  "scale text"
+  ("j" text-scale-increase "in")
+  ("k" text-scale-decrease "out")
+  ("f" nil "finished" :exit t))
+
+(semacs/leader-keys
+  "ts" '(hydra-text-scale/body :which-key "scale text"))
+#+END_SRC
+
+* Project Management
+I use projectile for my project management
+
+#+BEGIN_SRC emacs-lisp
+(use-package projectile
+  :diminish projectile-mode
+  :config (projectile-mode)
+  :custom ((projectile-completion-system 'ivy))
+  :init
+  (when (file-directory-p "~/Projects/Rust")
+    (setq projectile-project-search-path '("~/Projects/Rust"))))
+
+(semacs/leader-keys
+  "p" '(projectile-command-map :which-key "Projectile Commands"))
+
+(use-package counsel-projectile
+  :config (counsel-projectile-mode))
+#+END_SRC
+
+* Magit.... Frickin' Finally
+
+#+BEGIN_SRC emacs-lisp
+(use-package magit
+  :custom
+  (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+
+(use-package forge)
+#+END_SRC
+
+* Org Mode
+
+#+BEGIN_SRC emacs-lisp
+(use-package org
+  :hook (org-mode . efs/org-mode-setup)
+  :config
+  (setq org-ellipsis " ▾"))
+
+(use-package org-bullets
+  :after org
+  :hook (org-mode . org-bullets-mode)
+  :custom
+  (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●")))
+#+END_SRC
+
+* Other Miscellaneous Packages
+#+BEGIN_SRC emacs-lisp
+(use-package rainbow-delimiters
+  :hook (prog-mode . rainbow-delimiters-mode))
+
+(use-package format-all)
+
+(use-package which-key
+  :init
+  (which-key-mode)
+  :diminish which-key-mode
+  :config
+  (setq which-key-idle-delay 0.5))
+
+(use-package helpful
+  :custom
+  (counsel-describe-function-function #'helpful-callable)
+  (counsel-describe-variable-function #'helpful-variable)
+  :bind
+  ([remap describe-function] . counsel-describe-function)
+  ([remap describe-command] . helpful-command)
+  ([remap describe-variable] . counsel-describe-variable)
+  ([remap describe-key] . helpful-key))
+#+END_SRC
+
+* Other Basic Stuff
+More stuff to stop emacs from complaining
+
+#+BEGIN_SRC emacs-lisp
+(provide 'init)
+;;; init.el ends here
+#+END_SRC
+
+** Stuff Added by custom
+
+#+BEGIN_SRC emacs-lisp
+(custom-set-variables
+ ;; custom-set-variables was added by Custom.
+ ;; If you edit it by hand, you could mess it up, so be careful.
+ ;; Your init file should contain only one such instance.
+ ;; If there is more than one, they won't work right.
+ '(custom-safe-themes
+   '("47db50ff66e35d3a440485357fb6acb767c100e135ccdf459060407f8baea7b2" "b7e460a67bcb6cac0a6aadfdc99bdf8bbfca1393da535d4e8945df0648fa95fb" default))
+ '(ivy-rich-mode t)
+ '(package-selected-packages
+   '(evil-collection evil visual-fill-column evil-magit magit counsel-projectile org-bullets projectile hydra format-all format-all-buffer general dashboard helpful ivy-rich counsel which-key rainbow-delimiters swiper ivy doom-themes doom-modeline use-package)))
+(custom-set-faces
+ ;; custom-set-faces was added by Custom.
+ ;; If you edit it by hand, you could mess it up, so be careful.
+ ;; Your init file should contain only one such instance.
+ ;; If there is more than one, they won't work right.
+ )
+#+END_SRC
