--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -71,7 +71,6 @@ I use relative line numbers
 #+begin_src emacs-lisp
 (column-number-mode)
 (global-display-line-numbers-mode 1)
-(setq display-line-numbers-type 'relative)
 ;; Disable line numbers for some modes
 (dolist (mode '(shell-mode-hook
                 eshell-mode-hook))
@@ -194,46 +193,126 @@ I love the dark side
 I use general for my keybindings
 
 #+begin_src emacs-lisp
-(use-package general
-  :config (general-create-definer semacs/leader-keys
-	    :keymaps '(normal insert visual emacs)
-	    :prefix "SPC"
-	    :global-prefix "C-SPC")
+  (use-package general
+    :config (general-create-definer sme/leader-keys
+	      :keymaps '(normal insert visual emacs)
+	      :prefix "SPC"
+	      :global-prefix "C-SPC")
 
-  (semacs/leader-keys
-    "tt" '(counsel-load-theme :which-key "Choose theme")
-    "x" '(counsel-M-x :which-key "Execute a command")))
+    (sme/leader-keys
+      "tt" '(counsel-load-theme :which-key "Choose theme")
+      "x" '(counsel-M-x :which-key "Execute a command")))
 
-(use-package hydra)
+  (use-package hydra)
 
-(defhydra hydra-text-scale (:timeout 4)
-  "scale text"
-  ("j" text-scale-increase "in")
-  ("k" text-scale-decrease "out")
-  ("f" nil "finished" :exit t))
+  (defhydra hydra-text-scale (:timeout 4)
+    "scale text"
+    ("j" text-scale-increase "in")
+    ("k" text-scale-decrease "out")
+    ("f" nil "finished" :exit t))
 
-(semacs/leader-keys
-  "ts" '(hydra-text-scale/body :which-key "scale text"))
+  (sme/leader-keys
+    "ts" '(hydra-text-scale/body :which-key "scale text"))
 #+end_src
 
 * Project Management
 I use projectile for my project management
 
 #+begin_src emacs-lisp
-(use-package projectile
-  :diminish projectile-mode
-  :config (projectile-mode)
-  :custom ((projectile-completion-system 'ivy))
-  :init
-  (when (file-directory-p "~/Projects/Rust")
-    (setq projectile-project-search-path '("~/Projects/Rust"))))
+  (use-package projectile
+    :diminish projectile-mode
+    :config (projectile-mode)
+    :custom ((projectile-completion-system 'ivy))
+    :init
+    (when (file-directory-p "~/Projects/Rust")
+      (setq projectile-project-search-path '("~/Projects/Rust"))))
 
-(semacs/leader-keys
-  "p" '(projectile-command-map :which-key "Projectile Commands"))
+  (sme/leader-keys
+    "p" '(projectile-command-map :which-key "Projectile Commands"))
 
-(use-package counsel-projectile
-  :config (counsel-projectile-mode))
+  (use-package counsel-projectile
+    :config (counsel-projectile-mode))
 #+end_src
+
+* Development
+
+** Setting up LSP Mode
+
+#+begin_src emacs-lisp
+  (defun sme/lsp-mode-setup ()
+    (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
+    (lsp-headerline-breadcrumb-mode))
+  (use-package lsp-mode
+    :commands
+    (lsp lsp-deferred)
+    :hook
+    (lsp-mode . sme/lsp-mode-setup)
+    :init
+    (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
+    :custom
+    (lsp-eldoc-render-all t)
+    (lsp-rust-analyzer-server-display-inlay-hints t)
+    :config
+    (lsp-enable-which-key-integration t))
+
+  (use-package lsp-ui
+    :hook (lsp-mode . lsp-ui-mode)
+    :custom
+    (lsp-ui-doc-position 'bottom))
+
+  (use-package lsp-ivy)
+#+end_src
+
+** Company Mode
+
+#+begin_src emacs-lisp
+      (use-package company
+	:after lsp-mode
+	:hook (lsp-mode . company-mode)
+	:bind
+	(:map company-active-map
+	      ("<tab>" . company-complete-selection)
+	      ("C-j" . company-select-next)
+	      ("C-k . company-select-previous"))
+	(:map lsp-mode-map
+	      ("<tab>" . company-indent-or-complete-common))
+	:custom
+	(company-minimum-prefix-length 1)
+	(company-idle-delay 0.0))
+
+      (use-package company-box
+	:hook (company-mode . company-box-mode))
+#+end_src
+
+** Rust Setup
+
+#+begin_src emacs-lisp
+  (use-package flycheck)
+
+  (use-package rustic
+    :bind (:map rustic-mode-map
+		("M-j" . lsp-ui-imenu)
+		("M-?" . lsp-find-references)
+		("C-c C-c l" . flycheck-list-errors)
+		("C-c C-c a" . lsp-execute-code-action)
+		("C-c C-c r" . lsp-rename)
+		("C-c C-c q" . lsp-workspace-restart)
+		("C-c C-c Q" . lsp-workspace-shutdown)
+		("C-c C-c s" . lsp-rust-analyzer-status))
+    :config
+    ;; comment to disable rustfmt on save
+    (setq rustic-format-on-save t))
+#+end_src
+
+** Misc
+#+begin_src emacs-lisp
+  ;; Commenting
+  (use-package evil-nerd-commenter
+    :bind ("C-/" . evilnc-comment-or-uncomment-lines))
+
+  ;; Automatic pairing of parantheses
+  (electric-pair-mode 1)
+#+end_src 
 
 * Magit.... Frickin' Finally
 
@@ -248,7 +327,7 @@ I use projectile for my project management
 * Org Mode
 
 #+begin_src emacs-lisp
-  (defun efs/org-font-setup ()
+  (defun sme/org-font-setup ()
   ;; Replace list hyphen with dot
     (font-lock-add-keywords 'org-mode
 			  '(("^ *\\([-]\\) "
@@ -265,7 +344,8 @@ I use projectile for my project management
 		  (org-level-8 . 1.1)))
     (set-face-attribute (car face) nil :font "JetBrainsMono Nerd Font" :weight 'regular :height (cdr face))))
   (use-package org
-    :hook (org-mode)
+    :hook
+    (org-mode . sme/org-font-setup)
     :config
     (setq org-ellipsis " ▾"))
 
@@ -280,20 +360,6 @@ I use projectile for my project management
   (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (add-to-list 'org-structure-template-alist '("rs" . "src rust"))
-#+end_src
-
-* Development
-
-** Setting up LSP Mode
-
-#+begin_src emacs-lisp
-(use-package lsp-mode
-  :commands (lsp lsp-deferred)
-  :hook (lsp-mode . efs/lsp-mode-setup)
-  :init
-  (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
-  :config
-  (lsp-enable-which-key-integration t))
 #+end_src
 
 * Other Miscellaneous Packages
