--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -39,8 +39,8 @@ If I don't set it up, Emacs Complains
 ** Font Settings
 
 #+begin_src emacs-lisp
-(set-face-attribute 'default nil :font "JetBrainsMono Nerd Font" :height 120)
-(set-face-attribute 'fixed-pitch nil :font "JetBrainsMono Nerd Font" :height 120)
+(set-face-attribute 'default nil :font "Roboto Mono Nerd Font" :height 120)
+(set-face-attribute 'fixed-pitch nil :font "Roboto Mono Nerd Font" :height 120)
 (set-face-attribute 'variable-pitch nil :font "Source Sans Pro" :height 120 :weight 'regular)
 #+end_src
 
@@ -366,7 +366,7 @@ I use projectile for my project management
 		  (org-level-6 . 1.1)
 		  (org-level-7 . 1.1)
 		  (org-level-8 . 1.1)))
-    (set-face-attribute (car face) nil :font "JetBrainsMono Nerd Font" :weight 'regular :height (cdr face))))
+    (set-face-attribute (car face) nil :font "Roboto Mono Nerd Font" :weight 'regular :height (cdr face))))
   (use-package org
     :hook
     (org-mode . sme/org-font-setup)
