--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -71,7 +71,7 @@
    #+begin_src emacs-lisp
      (column-number-mode)
      (global-display-line-numbers-mode 1)
-     (setq display-line-numbers 'relative)
+     (setq display-line-numbers-type 'relative)
      ;; Disable line numbers for some modes
      (dolist (mode '(shell-mode-hook
 		     eshell-mode-hook))
