--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -226,8 +226,8 @@
       :config (projectile-mode)
       :custom ((projectile-completion-system 'ivy))
       :init
-      (when (file-directory-p "~/Projects/Rust")
-	(setq projectile-project-search-path '("~/Projects/Rust"))))
+      (when (file-directory-p "~/projects/rust")
+	(setq projectile-project-search-path '("~/projects/rust"))))
 
     (sme/leader-keys
       "p" '(projectile-command-map :which-key "Projectile Commands"))
