--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -319,12 +319,12 @@
        :bind (:map rustic-mode-map
 		   ("M-j" . lsp-ui-imenu)
 		   ("M-?" . lsp-find-references)
-		   ("C-c C-c l" . flycheck-list-errors)
-		   ("C-c C-c a" . lsp-execute-code-action)
-		   ("C-c C-c r" . lsp-rename)
-		   ("C-c C-c q" . lsp-workspace-restart)
-		   ("C-c C-c Q" . lsp-workspace-shutdown)
-		   ("C-c C-c s" . lsp-rust-analyzer-status))
+		   ("C-c l" . flycheck-list-errors)
+		   ("C-c a" . lsp-execute-code-action)
+		   ("C-c r" . lsp-rename)
+		   ("C-c C-r" . lsp-workspace-restart)
+		   ("C-c q" . lsp-workspace-shutdown)
+		   ("C-c s" . lsp-rust-analyzer-status))
        :config
        ;; comment to disable rustfmt on save
        (setq rustic-format-on-save t))
