--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -46,21 +46,22 @@
 * Package Management Setup
 
   #+begin_src emacs-lisp
-    (require 'package)
+	(require 'package)
 
-    (setq package-archives '(("melpa" . "https://melpa.org/packages/")
-			     ("org" . "https://orgmode.org/elpa/")
-			     ("elpa" . "https://elpa.gnu.org/packages/")))
+	(setq package-archives '(("melpa" . "https://melpa.org/packages/")
+							 ("org" . "https://orgmode.org/elpa/")
+							 ("elpa" . "https://elpa.gnu.org/packages/")))
 
-    (package-initialize)
-    (unless package-archive-contents
-      (package-refresh-contents))
+	(package-initialize)
+	(unless package-archive-contents
+	  (package-refresh-contents))
 
-    ;; Initialize use-package on non-Linux platforms
-    (unless (package-installed-p 'use-package)
-      (package-install 'use-package))
-    (require 'use-package)
-    (setf use-package-always-ensure t)
+	;; Initialize use-package on non-Linux platforms
+	(unless (package-installed-p 'use-package)
+	  (package-install 'use-package))
+	(require 'use-package)
+	(setf use-package-always-ensure t)
+	(use-package use-package-ensure-system-package)
   #+end_src
 
 * Theming
@@ -87,7 +88,7 @@
        :init
        (doom-modeline-mode 1)
        :custom
-       ((doom-modeline-height 42)
+       ((doom-modeline-height 40)
 	(doom-modeline-icon t)
 	(doom-modeline-major-mode-icon t)))
    #+end_src
